--- a/catalog.html
+++ b/catalog.html
@@ -23,8 +23,7 @@
             <label class="visually-hidden" for="search-field">Поиск по сайту</label>
             <input class="search" type="search" id="search-field" name="search-field" placeholder="Поиск:">
             <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-              <path fill="#ffffff"
-                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+              <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
             </svg>
           </form>
           <a class="link flag-link" href="#">Закладки: 0</a>
@@ -42,19 +41,17 @@
         </div>
         <div class="user-navigation user-catalog-navigation">
           <div class="account-name">
-            <a class="account-link-name" href="#">Равшан Джамшутович</a>
-            <a class="profile-link" href="#" aria-label="Профайл пользователя">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
-                <path fill="#c5c5c5"
+            <a class="account-link-name" href="#" aria-label="Профайл пользователя">Равшан Джамшутович
+              <svg class="profile-logo" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                <path 
                   d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z" />
               </svg>
             </a>
             <a class="logout-link" href="index.html" aria-label="Выйти из аккаунта">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
-                <g fill="#c5c5c5">
-                  <path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z" />
-                  <path fill="#c5c5c5"
-                    d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z" />
+                <g>
+                  <path d="M21 8.5L12.125 0v6h-6v5h6v6z" />
+                  <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z" />
                 </g>
               </svg>
             </a>
@@ -110,8 +107,8 @@
                   <div class="scale">
                     <div class="bar"></div>
                   </div>
-                  <div class="toggle toggle-min"></div>
-                  <div class="toggle toggle-max"></div>
+                  <div class="toggle toggle-min" tabindex="0"></div>
+                  <div class="toggle toggle-max" tabindex="0"></div>
                 </div>
                 <div class="range-slider">
                   <input class="value value-min" type="number" value="0" name="min">
@@ -187,8 +184,8 @@
               <ul class="catalog-list catalog-page-list">
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -202,8 +199,8 @@
                 </li>
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
@@ -219,8 +216,8 @@
                 <li class="catalog-item catalog-page-item">
                   <div class="flag flag-new">новинка</div>
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -233,8 +230,8 @@
                 </li>
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -249,8 +246,8 @@
                 <li class="catalog-item catalog-page-item">
                   <div class="flag flag-new">новинка</div>
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
@@ -264,8 +261,8 @@
                 </li>
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -280,8 +277,8 @@
                 <li class="catalog-item catalog-page-item">
                   <div class="flag flag-new">новинка</div>
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -295,8 +292,8 @@
                 </li>
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
@@ -310,8 +307,8 @@
                 </li>
                 <li class="catalog-item catalog-page-item">
                   <div class="action-item">
-                    <a class="action-item-card buy-button" href="">купить</a>
-                    <a class="action-item-card bookmark-button" href="">в закладки</a>
+                    <a class="action-item-card buy-button" href="#">купить</a>
+                    <a class="action-item-card bookmark-button" href="#">в закладки</a>
                   </div>
                   <p class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -403,7 +400,7 @@
     <div class="cart-success-wrapper">
       <p>Товар добавлен в корзину!</p>
       <div class="modal-cart-buttons">
-        <a class="main-buttons" href="">Оформить заказ</a>
+        <a class="main-buttons" href="#">Оформить заказ</a>
         <button class="main-buttons continue-button" type="button">Продолжить покупки</button>
       </div>
     </div>
