--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <label class="visually-hidden" for="search-field">Поиск по сайту</label>
             <input class="search" type="search" id="search-field" name="search-field" placeholder="Поиск:">
             <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-              <path fill="#ffffff"
-                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+              <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
             </svg>
           </form>
           <a class="link flag-link" href="#">Закладки: 0</a>
@@ -41,11 +40,10 @@
           <p class="header-info-adresse">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="user-navigation user-index-navigation">
-          <a class="account-link account-link-login" href="">
+          <a class="account-link account-link-login" href="#">
             <svg class="icon-login" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-              <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z" />
-              <path fill="#c5c5c5"
-                d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" />
+              <path d="M14.875 8.5L6 0v6H0v5h6v6z" />
+              <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" />
             </svg>
             Войти</a>
           <a class="account-link account-link-registration" href="">Регистрация</a>
@@ -74,7 +72,7 @@
             <div class="flag flag-new">новинка</div>
             <ul class="type-of-service-list">
               <li><span class="service-caption">Материалы</span></li>
-              <li><a class="service-link" href="#">На любой вкус </a></li>
+              <li><a class="service-link" href="#">На любой вкус</a></li>
             </ul>
           </div>
           <div class="type-of-service tools">
@@ -93,8 +91,8 @@
               <label class="product-label product-2-label" for="product-2-toggle">Второй</label>
             </div>
             <div class="slider-controls-arrow">
-              <label class="product-arrow product-arrow-left" for="product-arrow-left">Первый</label>
-              <label class="product-arrow product-arrow-right" for="product-arrow-right">Второй</label>
+              <label class="product-arrow product-arrow-left" for="product-arrow-left" tabindex="0">Первый</label>
+              <label class="product-arrow product-arrow-right" for="product-arrow-right" tabindex="0">Второй</label>
             </div>
             <ul class="slider-list">
               <li class="slider-item slide-1" id="slide1">
@@ -143,8 +141,8 @@
           <ul class="catalog-list">
             <li class="catalog-item index-page-item">
               <div class="action-item">
-                <a class="action-item-card buy-button" href="">купить</a>
-                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                <a class="action-item-card buy-button" href="#">купить</a>
+                <a class="action-item-card bookmark-button" href="#">в закладки</a>
               </div>
               <p class="catalog-item-image">
                 <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
@@ -158,8 +156,8 @@
             </li>
             <li class="catalog-item index-page-item">
               <div class="action-item">
-                <a class="action-item-card buy-button" href="">купить</a>
-                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                <a class="action-item-card buy-button" href="#">купить</a>
+                <a class="action-item-card bookmark-button" href="#">в закладки</a>
               </div>
               <p class="catalog-item-image">
                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -174,8 +172,8 @@
             <li class="catalog-item index-page-item">
 
               <div class="action-item">
-                <a class="action-item-card buy-button" href="">купить</a>
-                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                <a class="action-item-card buy-button" href="#">купить</a>
+                <a class="action-item-card bookmark-button" href="#">в закладки</a>
               </div>
               <p class="catalog-item-image">
                 <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
@@ -190,8 +188,8 @@
             <li class="catalog-item index-page-item">
               <div class="flag flag-new">новинка</div>
               <div class="action-item">
-                <a class="action-item-card buy-button" href="">купить</a>
-                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                <a class="action-item-card buy-button" href="#">купить</a>
+                <a class="action-item-card bookmark-button" href="#">в закладки</a>
               </div>
               <p class="catalog-item-image">
                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -275,9 +273,9 @@
         <input class="visually-hidden service-3-toggle" type="radio" id="service-3-toggle" name="service-toggle">
         <div class="preferences-container">
           <div class="service-controls-toggle">
-            <label class="service-label service-1-label" for="service-1-toggle">Доставка</label>
-            <label class="service-label service-2-label" for="service-2-toggle">Гарантия</label>
-            <label class="service-label service-3-label" for="service-3-toggle">Кредит</label>
+            <label class="service-label service-1-label" for="service-1-toggle" tabindex="0">Доставка</label>
+            <label class="service-label service-2-label" for="service-2-toggle" tabindex="0">Гарантия</label>
+            <label class="service-label service-3-label" for="service-3-toggle" tabindex="0">Кредит</label>
           </div>
           <ul class="service-list">
             <li class="info-service info-delivery">
@@ -333,7 +331,7 @@
           <h2 class="visually-hidden">Контактная информация</h2>
           <p class="caption">Контакты</p>
           <p class="service-desc contact-info-desc">Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="mini-map-link" href="#">
+          <a class="mini-map-link" href="https://www.google.ru/maps/place/Большая+Конюшенная+ул.,+19%2F8,+Санкт-Петербург,+191186/@59.9387165,30.3208587,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
             <img class="small-map" src="img/map-small.png" width="300" height="158"
               alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
           </a>
@@ -426,8 +424,7 @@
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716132967!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1583307675638!5m2!1sru!2sru"
       width="940" height="446"></iframe>
-    <a
-      href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?ll=30.323118%2C59.938635&sll=30.304899%2C59.918077&source=wizgeo&sspn=1.333466%2C0.410950&utm_medium=maps-desktop&utm_source=serp&z=16.64">
+    <a href="https://www.google.ru/maps/place/Большая+Конюшенная+ул.,+19%2F8,+Санкт-Петербург,+191186/@59.9387165,30.3208587,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
       <img src="img/map-big.png" width="940" height="446"
         alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     </a>
@@ -438,7 +435,7 @@
     <div class="cart-success-wrapper">
       <p>Товар добавлен в корзину!</p>
       <div class="modal-cart-buttons">
-        <a class="main-buttons" href="">Оформить заказ</a>
+        <a class="main-buttons" href="#">Оформить заказ</a>
         <button class="main-buttons continue-button" type="button">Продолжить покупки</button>
       </div>
     </div>
